Fix alignment issues on the security page

--- a/static/less/account-reconciliation.less
+++ b/static/less/account-reconciliation.less
@@ -1,4 +1,8 @@
 .account-reconciliation {
+  .col-md-8 {
+    width: 570px;
+  }
+
   .header-menu {
     a {
       color: @white !important;
