--- a/static/less/root.less
+++ b/static/less/root.less
@@ -120,7 +120,6 @@ h4 {
 
 .col-md-8 {
   padding: 0;
-  width: 570px;
 }
 
 section {
